feat/3speak_video started adding form for adding videos to the ecency fork

--- a/src/common/components/landing-page/_index.scss
+++ b/src/common/components/landing-page/_index.scss
@@ -154,6 +154,18 @@
       color: $dark-sky-blue;
     }
 
+    @include themify(sky) {
+      color: $white-three;
+    }
+
+    @include themify(dusk) {
+      color: $white-three;
+    }
+
+    @include themify(burning) {
+      color: $burning-primary;
+    }
+
     @include themify(night) {
       color: $pinkish-grey;
     }
