--- a/src/common/pages/_sign-up.scss
+++ b/src/common/pages/_sign-up.scss
@@ -1,3 +1,95 @@
+.select_signup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 35px;
+  gap: 20px;
+  
+
+  .signup_option {
+    background-color: $dark-two;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    text-align: center;
+    cursor: pointer;
+    max-width: 200px;
+    transition: all 0.15s linear;
+
+
+    img {
+      width: 125px;
+      margin-bottom: 10px;
+    }
+
+    &:hover {
+      background-color: $steel-grey;
+    }
+  }
+}
+
+.apple_download {
+  border-radius: 11px;
+  border: solid 2px #77787a;
+}
+
+.lightning_wallet_download {
+  gap: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img {
+    cursor: pointer;
+  }
+}
+
+.lightning_modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #00000066;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .lightning_content {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    align-items: center;
+    text-align: center;
+    background-color: $dark-two;
+    padding: 1rem 3rem;
+
+    .close_icon {
+      width: 25px;
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      cursor: pointer;
+
+      svg {
+        margin: 0 !important;
+      }
+    }
+
+    svg {
+      margin: 15px 0;
+    }
+
+    p {
+      max-width: 55%;
+    }
+
+    img {
+      height: 64px;
+    }
+  }
+}
+
 .sign-up-page {
   display: flex;
 
